--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,11 +4,17 @@
   "name": "Xola Impersonator",
   "description": "Quick impersonation tool for Xola admins",
   "version": "1.0",
+  "icons": {
+    "128": "icon-128.png"
+  },
   "browser_action": {
-    "default_icon": "icon.png",
     "default_popup": "index.html"
   },
   "permissions": [
+    "https://xola.com/*",
+    "https://sandbox.xola.com/*",
+    "https://staging.xola.com/*",
+    "http://xola.local/*",
     "storage"
   ]
 }
