--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "clipboard": "^2.0.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
