--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "clipboard": "^2.0.0",
+    "faker": "^4.1.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
