Moved everything to background scripts

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -30,12 +30,16 @@
   ],
   "background": {
     "scripts": [
+      "vendor/jQuery.js",
+      "vendor/lodash.js",
+      "vendor/faker.js",
+      "booking_generator.js",
       "background.js"
     ],
     "persistent": false
   },
   "web_accessible_resources": [
     "content_scripts/reimpersonate.js",
-    "content_scripts/booking_generator.js"
+    "content_scripts/booking_generator_injector.js"
   ]
 }
