Faster generation: Place upto 10 orders simultaneously

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -30,6 +30,7 @@
   ],
   "background": {
     "scripts": [
+      "vendor/async.min.js",
       "vendor/jQuery.js",
       "vendor/lodash.js",
       "vendor/faker.js",
